--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -4,7 +4,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:lnk="http://java.sun.com/jsf/composite/linkare">
     <h:head>
     </h:head>
     <h:body>
@@ -14,7 +15,14 @@
                     <p:growl id="growl" showDetail="true"/>
 
                     <p:panel  id="PanelTotal" style="position: absolute; width: 874px; height: 510px; text-align: left;background-color: white">
-                        <p:calendar id="prueba" value="#{controlPruebasUnitarias.fechaPrueba}" pattern="HH:mm a" timeOnly="true"/>
+                        <div id="posicionFechaDesdeParametro" style="position: absolute; top: 7px; left: 90px;">
+                            <lnk:calendar value="#{controlPruebasUnitarias.fechaPrueba}" id="fechaDesdeParametroL"  width="70">
+                                <p:ajax event="change" listener="#{controlPruebasUnitarias.modificarParametroInforme()}" process="@this" update="fechaDesdeParametroL"/>
+                                <p:ajax event="dateSelect" listener="#{controlPruebasUnitarias.modificarParametroInforme()}" process="@this" update="fechaDesdeParametroL"/>
+                            </lnk:calendar> 
+                        </div>
+                        
+                        <p:calendar style="position: absolute; top: 37px; left: 90px;" id="prueba" value="#{controlPruebasUnitarias.fechaPrueba}" pattern="HH:mm a" timeOnly="true"/>
                     </p:panel>   
                 </h:form>
             </ui:define>
