--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -46,7 +46,7 @@
                                 <p:commandButton style="position: absolute; top: 65px;left: 90px; width: 180px; height: 25px; " value="Configuración Cuadrillas..." actionListener="#{controlATCuadrilla.recibirPagina('novedad')}" action="atcuadrilla"></p:commandButton>
                                 <p:commandButton style="position: absolute; top: 105px;left: 90px; width: 180px; height: 25px; " value="Parametros Tiempos..." actionListener="#{controlATParametroTiempo.recibirPagina('novedad')}" action="atparametrotiempo"></p:commandButton>
                                 <p:commandButton style="position: absolute; top: 145px;left: 90px; width: 180px; height: 25px; " value="Novedad Horas Extras..." actionListener="#{controlATHoraExtra.recibirPagina('novedad')}" action="athoraextra"></p:commandButton>
-                                <p:commandButton style="position: absolute; top: 185px;left: 90px; width: 180px; height: 25px; " value="Aprovación Horas Extras..." actionListener="#{controlNovedad.recibir('Aprovacion Horas Extras')}" action="Impresion"></p:commandButton>
+                                <p:commandButton style="position: absolute; top: 185px;left: 90px; width: 180px; height: 25px; " value="Aprovación Horas Extras..." actionListener="#{controlATAprobacionHE.recibirPagina('novedad')}" action="ataprobacionhe"></p:commandButton>
                                 <p:commandButton style="position: absolute; top: 225px;left: 90px; width: 180px; height: 25px; " value="Ausentismos..."  action="atausentismos" ></p:commandButton>
                             </fieldset>
                             <fieldset style="position: absolute; top: 280px ;left: 265px;height: 103px; width: 265px; border-radius: 10px">
