--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -780,7 +780,7 @@
                         </p:dataTable> 
 
                         <p:commandButton id="buscarRap" value="#{msg['aceptar']}" actionListener="#{controlRemoto.busquedaRapida}" icon="ui-icon-check"  style="position: absolute; top: 260px; left: 565px"  disabled="#{controlRemoto.buscar}"/>
-                        <p:commandButton value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w"  style="position: absolute; top: 260px; left: 653px" actionListener="#{controlRemoto.busquedaRapidaAtras()}" />
+                        <p:commandButton value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w"  style="position: absolute; top: 260px; left: 653px" onclick="lvBr.hide()" />
                     </p:dialog>
 
                     <p:dialog id="lvBE" header="#{msg['empleadosE']}" widgetVar="lvBE"  resizable="false" draggable="false" modal="true" height="300"  width="735"  closable="false">  
@@ -817,7 +817,7 @@
                         <h:outputText id="infoRegistroBuscarEmpleados" value="#{controlRemoto.infoRegistroBuscarEmpleados}" style="position: absolute; left: 15px; top: 270px; font-weight: bold"/>
 
                         <p:commandButton id="buscarEmpl" value="#{msg['aceptar']}" icon="ui-icon-check" actionListener="#{controlRemoto.buscarEmpleado()}"   disabled="#{controlRemoto.buscar}" style="position: absolute; top: 260px; left: 565px"/>
-                        <p:commandButton value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlRemoto.busquedaEmpleadoAtras()}" style="position: absolute; top: 260px; left: 653px"/>
+                        <p:commandButton value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" onclick="lvBE.hide()" style="position: absolute; top: 260px; left: 653px"/>
                     </p:dialog>
 
                     <!-- LOV TABLAS-->
