--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -102,10 +102,10 @@
 
                                         <!-- Botones Con Imagen (3) -->
 
-                                        <p:commandButton style="background-image: url(Imagenes/buscarlaboral1.gif); position: absolute; top: 52px; width: 28px; height: 28px; background-size: 100% 100%; left: 12px; background-repeat: no-repeat; " value="" id="buscarLaboral" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada.recibirTipoBusqueda(0)}"  />
+                                        <p:commandButton style="background-image: url(Imagenes/buscarlaboral1.gif); position: absolute; top: 52px; width: 28px; height: 28px; background-size: 100% 100%; left: 12px; background-repeat: no-repeat; " value="" id="buscarLaboral" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada2.recibirTipoBusqueda(0)}"  />
                                         <p:tooltip  for="buscarLaboral" value="#{msg['badl']}"  />
 
-                                        <p:commandButton style="background-image: url(Imagenes/buscarpersonal1.gif); position: absolute; left: 43px; top: 52px; width: 28px; height: 28px; background-size: 100% 100%; background-repeat: no-repeat; " id="buscarPersonal" value="" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada.recibirTipoBusqueda(1)}"  />
+                                        <p:commandButton style="background-image: url(Imagenes/buscarpersonal1.gif); position: absolute; left: 43px; top: 52px; width: 28px; height: 28px; background-size: 100% 100%; background-repeat: no-repeat; " id="buscarPersonal" value="" action="busquedaAvanzada"  actionListener="#{controlBusquedaAvanzada2.recibirTipoBusqueda(1)}"  />
                                         <p:tooltip  for="buscarPersonal" value="#{msg['badp']}"  />
 
                                         <p:commandButton style="background-image: url(Imagenes/buscarrapida1.gif); position: absolute; left: 74px; top: 52px; width: 28px; height: 28px; background-size: 100% 100%; background-repeat: no-repeat; " id="busquedaRapida" value="" actionListener="#{controlRemoto.requerirBusquedaRapida()}" update=":form:lvBusquedaRapida"/>
