--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -15,7 +15,7 @@
     </h:head>
 
     <h:body onload="iniciarScrollEmpleado();">
-        <div id="top"  class="top" style="background-image: url(Imagenes/fondoencabezado.png); height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
+        <div id="top"  class="top" style="background-image: url(Imagenes/sinImagen.png); height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
             <ui:insert name="banner">
                 <h:form>
                     <div style="position: absolute; top: 100px; left: -3px;">
